--- a/ubuntu-14.10-amd64/Vagrantfile
+++ b/ubuntu-14.10-amd64/Vagrantfile
@@ -8,5 +8,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.provider "virtualbox" do |vb|
     vb.customize ["modifyvm", :id, "--memory", "4192"]
+    vb.customize ["modifyvm", :id, "--cpus", "2"]
   end
 end
